unpackaged/main/default/objects/Activity/fields/Natterbox_Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Natterbox_Call_Recording__c</fullName>
    <formula>if( nbavs__RecordingUUID1__c = &quot;&quot;, IMAGE(&quot;/resource/nbavs__playbuttons/PlayOff.png&quot;, &quot;No Recording was made&quot;),if(nbavs__RecordingUUID1__c = &quot;No Recording was made&quot;, IMAGE(&quot;/resource/nbavs__playbuttons/PlayOff.png&quot;, &quot;No Recording was made&quot;),HYPERLINK(&#39;/apex/nbavs__playrecordaction?id=&#39;+Id, IMAGE(&quot;/resource/nbavs__playbuttons/PlayOn.png&quot;, &quot;Play&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Natterbox Call Recording</label>
    <type>Text</type>
</CustomField>