unpackaged/main/default/objects/Activity/fields/nbavs__Call_Reporting__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Reporting</label>
    <referenceTo>nbavs__CallReporting__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>