unpackaged/main/default/objects/Activity/fields/nbavs__Call_UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_UUID__c</fullName>
    <externalId>true</externalId>
    <label>Call UUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>