unpackaged/main/default/objects/Activity/fields/nbavs__Insights_Player_Link__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insights_Player_Link__c</fullName>
    <formula>if(nbavs__Player_Link_Temp__c != null ,&#39;Click &#39; &amp; HYPERLINK(nbavs__Player_Link_Temp__c, &quot;here&quot;, &quot;_blank&quot;) &amp; &#39; to listen to the call recording&#39; ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insight Player Link</label>
    <type>Text</type>
</CustomField>