unpackaged/main/default/objects/Activity/fields/nbavs__Player_Link_Temp__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Player_Link_Temp__c</fullName>
    <label>Player Link Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>