unpackaged/main/default/objects/Activity/fields/nbavs__RecordingUUID1__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RecordingUUID1__c</fullName>
    <label>Recording UUIDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>